[package]
name = "quickdb"
version = "0.1.0"
authors = ["Zoro <zorotic@pm.me>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "quickdb"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
neon-serde = "0.4.0"
serde_derive = "1.0.80"
serde = "1.0.80"
sqlite = "0.25.1"
